make system names inline-block so they don't wrap

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
       .unnamed-system {
         font-family: monospace;
       }
+      .system-name {
+        display: inline-block;
+      }
       #output button, #total {
         float: right;
         margin: 0;
